--- a/wagon-providers/wagon-ssh-external/pom.xml
+++ b/wagon-providers/wagon-ssh-external/pom.xml
@@ -35,6 +35,7 @@ under the License.
 
   <properties>
     <sshd.stopImmediatly>false</sshd.stopImmediatly>
+    <version.bouncycastle>1.56</version.bouncycastle>
   </properties>
 
   <dependencies>
@@ -60,7 +61,7 @@ under the License.
       <artifactId>commons-io</artifactId>
       <scope>test</scope>
     </dependency>
-
+    <dependency><groupId>org.bouncycastle</groupId><artifactId>bcpkix-jdk15on</artifactId><scope>test</scope><version>${version.bouncycastle}</version></dependency>
   </dependencies>
 
   <profiles>
